--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,33 +1,34 @@
 /* Navbar.css */
-.navbar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  padding: 10px 20px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-}
 
 .logo {
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
   color: #333;
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  /*flex-grow: 1; /* Allows nav-links to take available space but not push out nav-icons */
+  margin-left: var(--spacing-medium); /* Consistent left margin */
 }
 
 .nav-icons {
   display: flex;
   align-items: center;
-  /*gap: 15px;
-  /*white-space: nowrap; /* Prevents icons from being pushed to a new line */
-  /*flex-shrink: 0; /* Prevents nav-icons from shrinking */
+  gap: var(--spacing-small); /* Consistent icon spacing */
+  margin-right: var(--spacing-medium); /* Consistent right margin */
+}
+
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: var(--spacing-small) var(--spacing-medium);
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  flex-grow: 1; /* Allows nav-links to take available space but not push out nav-icons */
 }
 
 .nav-links li {
